<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Esi-Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_file">File d actualites</string>
    <string name="action_msg">Contenus</string>
    <string name="action_notif">Notifications</string>
    <string name="action_profil">Profil</string>
    <string name="action_amis">Suivis</string>
    <string name="action_rech">Recherche</string>
    <string name="action_param">Parametres</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="scrollbar_text">Android Open Tutorials. Android Programming. Android Tutorials.
        Android Examples. Android SQLite. Android Layouts, Menus, Action Bar, ViewPager. Image Gallery.
        Data Storage. SharedPreferences, Internal and External Storage. ListView, GridView, RelativeLayout,
        LinearLayout, Scrollbar, Spinner, Dialog, CAB, Styling, ImageView blink, TextSwitcher, Library Projects,
        How to import Android Library Projects, Progress Bar, Animation, Android Tools and many more.</string>

</resources>
